포스팅 추가
이상한 나라의 수학자 영화 내용 추가

--- a/_posts/2023-01-15-first.md
+++ b/_posts/2023-01-15-first.md
@@ -1,10 +1,60 @@
 ---
-layout : post
-title : "새로운 블로그 시작"
+layout: single
+title: "[동기부여] 포기하고 싶을때 보면 도움이 되는 장면"
+categories: blog
+tag: [blog, motivation, movie]
+toc: true
+author_profile: false
+search: true
 ---
 
-## 기존에 있던 블로그에서 새로운 블로그로 이관
+#### 수학을 잘하는 사람은?
 
-기록해두고 나중에 필요할 때 다시한번 찾아보기 위한 용도
+##### 영화명대사
 
-짧고, 이해가 쉽고, 중요한 부분 위주로 작성
+![image1](../../images/etc/motivation/In_Our_Prime/1.png)
+![image2](../../images/etc/motivation/In_Our_Prime/2.png)
+![image3](../../images/etc/motivation/In_Our_Prime/3.png)
+![image4](../../images/etc/motivation/In_Our_Prime/4.png)
+![image5](../../images/etc/motivation/In_Our_Prime/5.png)
+![image6](../../images/etc/motivation/In_Our_Prime/6.png)
+![image7](../../images/etc/motivation/In_Our_Prime/7.png)
+![image8](../../images/etc/motivation/In_Our_Prime/8.png)
+![image9](../../images/etc/motivation/In_Our_Prime/9.png)
+![image10](../../images/etc/motivation/In_Our_Prime/10.png)
+![image11](../../images/etc/motivation/In_Our_Prime/11.png)
+![image12](../../images/etc/motivation/In_Our_Prime/12.png)
+![image13](../../images/etc/motivation/In_Our_Prime/13.png)
+![image14](../../images/etc/motivation/In_Our_Prime/14.png)
+![image15](../../images/etc/motivation/In_Our_Prime/15.png)
+![image16](../../images/etc/motivation/In_Our_Prime/16.png)
+![image17](../../images/etc/motivation/In_Our_Prime/17.png)
+![image18](../../images/etc/motivation/In_Our_Prime/18.png)
+![image19](../../images/etc/motivation/In_Our_Prime/19.png)
+![image20](../../images/etc/motivation/In_Our_Prime/20.png)
+![image21](../../images/etc/motivation/In_Our_Prime/21.png)
+![image22](../../images/etc/motivation/In_Our_Prime/22.png)
+![image23](../../images/etc/motivation/In_Our_Prime/23.png)
+
+<br>
+<br>
+
+#### 포스팅 계기
+
+무엇을 해야할지 모르겠고 오랜만에 공부를 하려고 해도 이해가 잘안되어서 자포자기 할 때 우연히 이 영화를 보는도중 이 장면이 너무 인상적이었습니다
+
+슬럼프를 겪을때 이 장면을 보면서 다시한번 포기하지 말고 덤덤하게 받아들이면서 다시 도전하는 마음을 갖기위해 포스팅하게 되었습니다
+
+<br>
+<br>
+
+#### 영화정보[이상한나라의수학자]
+
+<br>
+
+> ※ 이 영화는 포스팅 날짜(2022년 06월 26일)기준 넷플릭스에서 보실 수 있습니다.\
+>  (넷플릭스 광고 X)
+
+슬럼프를 겪는분들에게 동기부여가 될 수 있었으면 좋겠습니다
+
+![poster2](../../images/etc/motivation/In_Our_Prime/poster2.jpeg)
