--- a/_posts/interview/2023-02-07-interview01.md
+++ b/_posts/interview/2023-02-07-interview01.md
@@ -21,6 +21,48 @@ sidebar:
 
 하지만 지금 글을 작성하고 있는 순간에는, 다른 방식으로 접근해서 풀어볼수 있을것 같다
 
+```java
+/* 
+    Q1.  컨테이너 벨트가 있고 1초에 1칸씩 오른쪽으로 이동가능하며, 컨베이어 벨트가 견딜 수 있는 무게만 움직일 수 있다
+         1초에 한칸씩 우측으로 이동을 하게 되며 모든 컨테이너가 이동하는데 걸리는 시간은 총 몇초인가?
+*/
+
+int weight = 100; //컨베이어 벨트가 견딜 수 있는 무게
+int length = 3; //컨베이어 벨트 길이
+int containerCnt = 3; //컨테이너 사이즈
+int containers = {10, 20, 30}; //개별 컨테이너 무개
+
+[입력]
+100
+3
+3
+10, 20, 30
+
+[출력]
+5
+
+10 0 0 < 1초
+20 10 0 < 2초
+30 20 10 < 3초
+0 30 20 < 4초
+0 0 30 < 5초
+
+/*
+    Q2. xyxxy 가 있다. 여기서 xyxxy는 계속 반복해서 증가되며 1부터 100,000,000,000,000 까지 증가할 수 있다
+        n이라는 값이 주어졌을때 그때까지만 xyxxyxyxxy..를 잘라서 그중에서 x가 총 몇개 들어있는지 카운트하라 
+*/
+
+[입력]
+xyxxy
+9
+
+[출력]
+6
+
+xyxxyxyxxy 중에서 9개는 xyxxyxyxx 까지라서 여기서 x는 총 6개가 들어있음
+
+```
+
 #### 2. 진행 순서
 
 먼저 기술면접은 코딩테스트에서 내가 왜 이렇게 코드를 작성했는지 리뷰를 하며 시작하였다. 입출력 단계부터 천천히 설명을 하게 되었고 접근했던 방식이 면접관들의 기대와는 다르다는 것을 알게되었고 여기서 첫번째 질문이 들어왔다. 만약 이 문제를 자료구조로 적용한다면 어떻게 풀 수 있었을까? 답은 QUEUE 방식으로 접근한다면 가능할 것 같다고 대답하였다. 
@@ -42,6 +84,7 @@ JAVA에서는 아래 키워드들이 나왔던것 같다
 8. 옵셔널
 9. 트랜잭셔널(2가지 동시 사용불가?) <추후 확인>
 10. 해시맵 vs 해시테이블
+11. 해시맵은 왜 조회 속도가 빠를까? 동작원리를 아는가?
 
 DB
 1. 멀티index시 조회를 하면 어떻게 되는가(어느 부분을 타는지 - ex. index가 a, b, c컬럼 모두 걸려있을때)
