--- a/_posts/java/rest/2023-04-08-rest_study04.md
+++ b/_posts/java/rest/2023-04-08-rest_study04.md
@@ -497,6 +497,100 @@ JSOM, XML이건 Hyperlink형태로 쉽게 제공가능
 
 <b style="color:yellow">HAL 브라우저는 추후에 한번 더 검색해서 내용 추가해놓자</b>
 
+<br>
+<br>
+
+
+#### 6장. Spring Security를 이용한 인증 처리
+
+지금까지는 인터넷 브라우저나 포스트맨으로 바로 결과를 확인 할 수 있었지만 일반적으로 공개되어야 하는 정보가 아닌 경우에는 보안에 문제가 생기는 구조
+
+OAuth, Token, 아이디 비밀번호 등 여러가지 방법이 있음
+
+<b style="color:yellow">그중에서 Spring Security를 사용</b>
+
+사용하기 위해서는 pom.xml에 dependency를 추가해줘야한다
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+```
+
+추가해주고 maven reload 수행 후<b style="color:yellow"> 로그를</b> 확인해야 한다
+
+ctrl + f : 검색 누르고 password 검색
+
+![img2](../../../images/posts/java/rest/chapter04/11.png)
+
+밑에 로그를 보면 password를 확인 할 수 있다 
+
+> Using generated security password: 73edd0e2-2268-4f39-9054-b3e37bdca08f
+
+포스트맨을 키고 기존에 사용했던 URL을 호출 해보면 401에러가 발생하는 것을 볼 수 있다
+
+![img2](../../../images/posts/java/rest/chapter04/12.png)
+
+해결하기 위해서는 포스트맨에서 Authorization을 클릭하고 Type을 Basic Auth로 변경 후 
+
+> username : user
+> 
+> password : 73edd0e2-2268-4f39-9054-b3e37bdca08f
+
+이렇게 추가해주고 send를 하면 아래처럼 정상적으로 결과값이 나오는것을 확인 할 수 있다
+
+![img2](../../../images/posts/java/rest/chapter04/13.png)
+
+간단하게 스프링 dependency에 security 추가해주는것만으로 인증기능을 구현할 수 있다
+
+<br>
+<br>
+
+#### 7장. Configuration 클래스를 이용한 사용자 인증 처리
+
+이번에는 스프링 시큐리티에서 자동으로 생성된 패스워드가 아닌 개발자가 직접 만든 id, password를 지정해서 사용
+
+application.yml 파일에 아래 코드 추가
+
+```yml
+spring:
+  security:
+    user:
+      name: username
+      password: passOrd
+```
+
+위 코드를 추가해주면 현재 프로젝트에서 application.yml은 아래와 같이 표시
+```yml
+server:
+  port: 8088
+
+logging:
+  level:
+    org.springframework: DEBUG
+
+spring:
+  message:
+    basename: messages
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  security:
+    user:
+      name: username
+      password: passOrd
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+```
+
+이렇게 설정해주고 서버 재기동을 하면 ID, PASSWORD가 위에서 지정한 값이 들어가게 된다
+
+![img2](../../../images/posts/java/rest/chapter04/14.png)
 
 참고  
  1. [인프런 - SpringBoot를 이용한 RESTful 개발](https://www.inflearn.com/course/spring-boot-restful-web-services/dashboard)
