--- a/_posts/java/rest/2023-01-29-rest_study01.md
+++ b/_posts/java/rest/2023-01-29-rest_study01.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title : "[REST] REST 기초 용어 및 개념 설명"
+title : "[REST] RESTful Service 구현방법 #1(개요)"
 categories: rest
 tag: [rest, spring]
 toc : true
