--- a/_posts/java/rest/2023-01-29-rest_study02.md
+++ b/_posts/java/rest/2023-01-29-rest_study02.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title : "[REST] RESTful Service 구현방법 #1"
+title : "[REST] RESTful Service 구현방법 #2(SpringBoot와 RESTFUL Service)"
 categories: rest
 tag: [rest, spring]
 toc : true
