--- a/_posts/java/rest/2023-04-07-rest_study03.md
+++ b/_posts/java/rest/2023-04-07-rest_study03.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title : "[REST] RESTful Service 구현방법 #2"
+title : "[REST] RESTful Service 구현방법 #3(RESTFUL Service 기능 확장)"
 categories: rest
 tag: [rest, spring]
 toc : true
