--- a/_posts/java/rest/2023-04-08-rest_study04.md
+++ b/_posts/java/rest/2023-04-08-rest_study04.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title : "[REST] RESTful Service 구현방법 #3"
+title : "[REST] RESTful Service 구현방법 #4(Spring Boot API 사용-HATEOAS)"
 categories: rest
 tag: [rest, spring]
 toc : true
@@ -590,7 +590,46 @@ management:
 
 이렇게 설정해주고 서버 재기동을 하면 ID, PASSWORD가 위에서 지정한 값이 들어가게 된다
 
+포스트맨에서 Authorization을 클릭하고 Type을 Basic Auth로 변경 후 아래 데이터 입력
+
+> username : username
+> 
+> password : passOrd
+
 ![img2](../../../images/posts/java/rest/chapter04/14.png)
+
+어플리케이션 yml에 계정정보를 지정하게 되면 ID, PASSWORD가 변경되면 서버를 계속 재기동 해야한다
+
+따라서 고정된 ID사용대신 LDAP, 데이터베이스등 사용자 정보를 가져오는 방식으로 수정 필요
+
+먼저 config 패키지에 새로운 클래스(SecurityConfig) 생성
+
+
+```java
+//webSecurityConfigurerAdapter deprecated 되서 대안 필요
+@Configuration //서버가 기동될 때 설정파일이라고 인식
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+    @Autowired
+    public void configureGlobal(AuthenticationManagerBuilder auth){
+        throws Exception{
+            auth.inMemoryAuthentication()
+                    .withUser("kenneth")
+                    .password("{noop}test1234")
+                    //실제로 플레인 텍스트를 사용하면 오류가 발생할 수 있으니 인코딩 없이 
+                    //사용할 수 있게 사용하려면 {noop} 오퍼레이션 추가
+                    .roles("USER");
+        }
+    }
+}
+```
+
+<b style="color:yellow"> 이 부분은 deprecated되어서 추후에 검색을 통해서 해결하자</b>
+
+<br>
+<br>
+
+
+
 
 참고  
  1. [인프런 - SpringBoot를 이용한 RESTful 개발](https://www.inflearn.com/course/spring-boot-restful-web-services/dashboard)
