--- a/_posts/java/spring/2023-05-28-aws-spring01.md
+++ b/_posts/java/spring/2023-05-28-aws-spring01.md
@@ -214,9 +214,10 @@ NUnit - .net
 <br>
 
 
-가) HelloController 테스트 코드 작성하기
+##### 1장. HelloController 테스트 코드 작성하기
 
 1) java 폴더 아래에 패키지 생성(com.spring.aws_spring_study.springboot)
+   
 2) 새로 만든 패키지 아래에 Application.class 생성하기
 
 ```java
@@ -241,6 +242,7 @@ public class Application { //앞으로 만들 프로젝트의 메인 클래스
 ![img2](../../../images/posts/java/spring/aws-spring01/10.png)
 
 3) 패키지(com.spring.aws_spring_study.springboot) 아래에 새로운 패키지(web) 생성하기
+   
 4) web패키지에 테스트를 위한 HelloController.class 생성하기
  (앞으로 컨트롤러 클래스들은 web 패키지에 위치)
 ```java
@@ -273,6 +275,7 @@ KEY POINT
 ```
 
 5) 테스트 폴더에도 main과 동일하게 패키지 생성(com.spring.aws_spring_study.springboot.web)
+   
 6) com.spring.aws_spring_study.springboot.web 패키지 아래에 HelloControllerTest 생성
 ```java
 package com.spring.aws_spring_study.springboot.web;
@@ -320,7 +323,7 @@ public class HelloControllerTest {
 
 
 
-나) 롬복 설치하기
+##### 2장. 롬복 설치하기
 
 롬복 : @Getter, @Setter, @NoArgsConstructor 등
 
@@ -336,6 +339,7 @@ dependencies {
 ```
 
 2) main 폴더에 com.spring.aws_spring_study.web 패키지 아래에 dto 패키지 생성하기
+   
 3) dto패키지 아래에 HelloResponseDto.class 만들기
 ```java
 package com.spring.aws_spring_study.springboot.web.dto;
@@ -390,6 +394,7 @@ public class HelloResponseDtoTest {
 }
 ```
 5) 롬복_기능_테스트()를 테스트 해보면 lombok이 정상적으로 동작하고 있는것을 확인 할 수 있다
+   
 6) 기존에 만들었던 main 폴더의 HelloController.class에 메소드를 추가해준다
 ```java
 @RestController
@@ -415,7 +420,7 @@ KEY POINT
  */
 ```
 
-7) Test폴더에 만들었던 HelloControllerTest에도 새로운 테스트 메소드를 추가해준다
+1) Test폴더에 만들었던 HelloControllerTest에도 새로운 테스트 메소드를 추가해준다
 ```java
 package com.spring.aws_spring_study.springboot.web;
 
@@ -554,7 +559,7 @@ JPA를 사용하기 위해서는 구현체가 필요하다(대표적으로 Hiber
 <u><b style="color:mediumspringgreen">[요약] 여기서는 Spring Data JPA를 사용해서 JPA 기능을 구현</b></u>
 
 
-가) 프로젝트에 Spring Data Jpa 적용하기
+##### 1장. 프로젝트에 Spring Data Jpa 적용하기
 
 1) build.gradle에 의존성 추가
 ```gradle
@@ -577,6 +582,8 @@ dependencies {
   - xml에 쿼리를 담고, 클래스는 오로지 쿼리의 결과만 담던 일들이 모두 도메인 클래스에서 해결된다
   - DDD 관련해서 공부하면서 도메인에 대해 좀 더 알아보자
 4) posts 패키지 아래에 Posts.class 생성
+
+
 ```java
 package com.spring.aws_spring_study.springboot.domain.posts;
 
@@ -619,19 +626,19 @@ public class Posts {
  - 기본값으로 클래스의 카멜케이스 이름을 언더스코어 네이밍(_)으로 테이블 이름을 매칭한다
  ex) SalesManager.java  ->  sales_manager [table]
 
-2. @Id
+1. @Id
  - 해당 테이블의 PK 필드를 나타낸다
 
-3. @GeneratedValue
+2. @GeneratedValue
  - PK 생성 규칙을 나타낸다
  - 스프링부트 2.0에서는 GenerationType.IDENTITY 옵션을 추가해야만 auto_increment가 된다
 
-4. @Column
+3. @Column
  - 테이블의 컬럼을 나타내며 굳이 선언하지 않더라도 해당 클래스의 필드는 모두 컬럼이 된다
  - 사용하는 이유는, 기본값 외에 추가로 변경이 필요한 옵션이 있으면 사용한다
  - 문자열의 경우 VARCHAR(255)가 기본값인데, 사이즈를 500으로 늘리고 싶거나 타입을 TEXT로 변경하고 싶은 경우 사용한다
 
-5. @Builder
+4. @Builder
  - 해당 클래스의 빌더 패턴 클래스를 생성
  - 생성자 상단에 선언 시 생성자에 포함된 필드만 빌더에 포함
 
@@ -641,6 +648,7 @@ public class Posts {
  - 필요시 명확한 의도를 나타낼 수 있는 메소드를 추가해야한다
  */
 ```
+
  - JPA를 사용하면 DB 데이터를 작업할 경우 실제 쿼리를 날리기보다는, 이 Entity 클래스의 수정을 통해 작업진행
 
 5) Posts 클래스 생성이 끝나면, Posts 클래스로 Database를 접근하게 해줄 JpaRepository.class를 생성한다(동일 경로)
@@ -669,7 +677,7 @@ public interface PostsRepository extends JpaRepository<Posts, Long> {
 <br>
 <br>
 
-나) Spring Data JPA 테스트 코드 작성하기
+##### 2장. Spring Data JPA 테스트 코드 작성하기
 
 1) test 폴더에 com.spring.aws_spring_study 패키지에 domain.posts 패키지를 생성하고, PostsRepositoryTest.class 생성
 ```java
@@ -757,7 +765,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 ```
 ![img2](../../../images/posts/java/spring/aws-spring01/16.png)
 
-다) 등록/수정/조회 API 만들기
+##### 3장. 등록/수정/조회 API 만들기
 
 
 <b style="color:mediumspringgreen">
@@ -826,35 +834,6 @@ public Order cancelOrder(int orderId){
 ```
 
 <b style="color:dodgerblue">[트랜잭션 스크립트 방식-기존]</b>
-```java
-@Transactional
-public Order cancelOrder(int orderId){
-
-  //1)
-  OrderDto order = orderDao.selectOrders(orderId);
-  BillingDto billing = billingDao.selectBilling(orderId);
-  DeliveryDto delivery = deliveryDao.selectDelivery(orderId);
-
-  //2)
-  String deliveryStatus = delivery.getStatus();
-
-  //3)
-  if("IN_PROGRESS".equals(deliveryStatus)){
-    delivery.setStatus("CANCEL");
-    deliveryDao.update(delivery);
-  }
-
-  //4)
-  order.setStatus("CANCEL");
-  orderDao.update(order);
-
-  billing.setStatus("CANCEL");
-  deliveryDao.update(billing);
-
-  return order;
-}
-```
-
 ```java
 @Transactional
 public Order cancelOrder(int orderId){
@@ -958,6 +937,7 @@ public class PostsApiController {
   
 
 2) main 폴더에 com.spring.aws_spring_study.springboot 패키지 아래에 service.posts 패키지 생성
+   
 3) com.spring.aws_spring_study.springboot.service.posts 패키지 아래에 PostsService.class 생성
 ```java
 package com.spring.aws_spring_study.springboot.service.posts;
