--- a/_posts/java/spring/2023-05-28-aws-spring01.md
+++ b/_posts/java/spring/2023-05-28-aws-spring01.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title : "[SPRING] 스프링 부트와 AWS로 혼자 구현하는 웹 서비스 #1(인텔리제이로 스프링부트 시작하기)"
+title : "[SPRING] 스프링 부트와 AWS로 혼자 구현하는 웹 서비스 #1(프로젝트 생성, 테스트코드, JPA)"
 categories: spring
 tag: [aws, spring]
 toc : true
