--- a/_posts/java/spring/2023-05-29-aws-spring02.md
+++ b/_posts/java/spring/2023-05-29-aws-spring02.md
@@ -297,7 +297,7 @@ public class IndexControllerTest {
 
 2. index.mustache에 layout 코드 import 
 
-```html
+```mustache
 {{>layout/header}}
 
 <h1>스프링부트로 시작하는 웹 서비스 Ver.2</h1>
@@ -307,7 +307,7 @@ public class IndexControllerTest {
 
 3. index.mustache에 글 등록 버튼 추가
 
-```html
+```mustache
 {{>layout/header}}
 
 <h1>스프링부트로 시작하는 웹 서비스 Ver.2</h1>
@@ -449,7 +449,7 @@ main.init();
 <b style="color:dodgerblue">5. 게시글 전체 조회 화면 만들기 </b>
 
 1. src/resources/templates 디렉토리에 있는 index.mustache 파일 열어서 수정
-```html
+```mustache
 {{>layout/header}}
 
 <h1>스프링부트로 시작하는 웹 서비스 Ver.2</h1>
@@ -630,7 +630,7 @@ public class PostsApiController {
 1. 게시글 수정 페이지 만들기(templates 디렉토리 아래에 posts-update.mustache 파일 생성)
 
 [posts-update.mustache 파일 생성 후 코드 작성]
-```html
+```mustache
 {{>layout/header}}
 
 <h1>게시글 수정</h1>
@@ -725,7 +725,7 @@ main.init();
 
 3. 전체 조회 화면에서 수정 페이지로 넘어갈 수 있게 수정(index.mustache)
 
-```html
+```mustache
 {{>layout/header}}
 
 <h1>스프링부트로 시작하는 웹 서비스 Ver.2</h1>
