--- a/_posts/java/msa/2023-05-13-msa_study02.md
+++ b/_posts/java/msa/2023-05-13-msa_study02.md
@@ -283,10 +283,702 @@ public class FirstServiceController {
 <b>만약 Page NotFound가 나오는 경우에는 ApiGateWay에 설정한 uri + predicates(/first-service 등) 정보도 같이 넘어가니 이 점 유의해서 구현하면 정상적으로 동작할 것</b>
 
 
-
-
 <br>    
 <br>
+
+#### 6장. Spring Cloud Gateway - Filter
+
+스프링 클라우드 게이트웨이 필터의 프로세스
+
+스프링 클라이언트가 게이트웨이쪽으로 어떤 요청을 전달하게 되면 First, Second 서비스로 갈지 분기처리를 해준다
+
+
+![img2](../../../images/posts/java/msa/chapter02/11.png)
+
+[Sprinc Cloud Gateway 내부 구조]
+
+1. Gateway Handler Mapping 에서 먼저 클라이언 요청을 바든ㄴ다
+
+2. 요청에 대한 사전 조건을 Predicate에서 보고 분기 처리를 해준다
+
+여기서 pre filter, post filter의 경우 기존에 yml 파일에서 작업을 했는데 이번에는 java code로 작성해 보겠다
+
+
+![img2](../../../images/posts/java/msa/chapter02/12.png)
+
+아래와 같이 스프링 클라우드 게이트웨이 필터 Config를 작성
+
+[작업내역]
+
+routes에서 처음에 /first-service/**라는 것이 들어오면 request Header, response Header에 내가 원하는 값을 추가해주고
+  uri(http://localhost:8081)쪽으로 보낸다음 결과값을 다시 클라이언트쪽에 보내주는 역할을 하겠다
+
+![img2](../../../images/posts/java/msa/chapter02/13.png)
+
+
+그 이후 마이크로서비스쪽에 작업을 해주면 된다
+
+[FirstServiceController.java] , [SecondServiceController.java] 작업 진행
+
+
+![img2](../../../images/posts/java/msa/chapter02/14.png)
+
+즉 테스트를 해보면 URL(127.0.0.1:8000/first-service/message) 라고 요청을 하면 아래와 같이 출력되도록 하겠다
+
+![img2](../../../images/posts/java/msa/chapter02/15.png)
+
+위 라우팅 작업을 자바 코드에 의해서 진행하도록 하겠다
+
+[기존에 만들었던 프로젝트 apigateway-service에 있는 ]
+
+![img2](../../../images/posts/java/msa/chapter02/16.png)
+
+위에 application.yml 파일에 작성했던 부분 주석 처리
+
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+#spring:
+#  application:
+#    name: apigateway-service
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: first-service
+#          uri: http://localhost:8081/
+#          predicates:
+#            - Path=/first-service/**
+#        - id: second-service
+#          uri: http://localhost:8082/
+#          predicates:
+#            - Path=/second-service/**
+```
+
+위 부분을 자바 코드로 변환
+
+먼저 com.example.apigatewayservice 아래에 config 패키지를 생성 후 FilterConfig 클래스 생성
+
+[기본 구조]
+```java
+package com.example.apigatewayservice.config;
+
+import org.springframework.cloud.gateway.route.RouteLocator;
+import org.springframework.cloud.gateway.route.builder.RouteLocatorBuilder;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class FilterConfig {
+    @Bean
+    public RouteLocator gatewayRoutes(RouteLocatorBuilder builder){
+        return builder.routes()
+                .route(r -> r.path()
+                        .filters()
+                        .uri())
+                .build();
+    }
+}
+```
+
+```java
+package com.example.apigatewayservice.config;
+
+import org.springframework.cloud.gateway.route.RouteLocator;
+import org.springframework.cloud.gateway.route.builder.RouteLocatorBuilder;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class FilterConfig {
+    @Bean
+    public RouteLocator gatewayRoutes(RouteLocatorBuilder builder){
+        return builder.routes()
+                .route(r -> r.path("/first-service/**")
+                        .filters(f -> f.addRequestHeader("", "")
+                                      .addResponseHeader("", ""))
+                        .uri("http://localhost:8081"))
+                .build();
+    }
+}
+```
+
+filter에 헤더 추가
+
+```java
+package com.example.apigatewayservice.config;
+
+import org.springframework.cloud.gateway.route.RouteLocator;
+import org.springframework.cloud.gateway.route.builder.RouteLocatorBuilder;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class FilterConfig {
+    @Bean
+    public RouteLocator gatewayRoutes(RouteLocatorBuilder builder){
+        return builder.routes()
+                .route(r -> r.path("/first-service/**")
+                        .filters(f -> f.addRequestHeader("first-request", "first-request-header")
+                                      .addResponseHeader("first-response", "first-response-header"))
+                        .uri("http://localhost:8081"))
+                .build();
+    }
+}
+```
+
+체이닝을 사용해서 두번째 서비스도 등록
+```java
+@Configuration
+public class FilterConfig {
+    @Bean
+    public RouteLocator gatewayRoutes(RouteLocatorBuilder builder){
+        return builder.routes()
+                .route(r -> r.path("/first-service/**")
+                        .filters(f -> f.addRequestHeader("first-request", "first-request-header")
+                                      .addResponseHeader("first-response", "first-response-header"))
+                        .uri("http://localhost:8081"))
+                .route(r -> r.path("/second-service/**")
+                        .filters(f -> f.addRequestHeader("second-request", "first-request-header")
+                                .addResponseHeader("second-response", "first-response-header"))
+                        .uri("http://localhost:8082"))
+                .build();
+    }
+}
+```
+
+이렇게 작성 한 후 FirstServiceController를 수정
+
+[기존 코드]
+```java
+package com.example.firstservice;
+
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+// http://localhost:8081/welcome 우리가 만든 프로젝트가 받기로 한 URI
+// 하지만 API-GATEWAY를 통해서 전달받을 때에는 http://locahost:8081/first-service/welcome 이렇게 받기 때문에 에러가 발생
+@RestController
+@RequestMapping("/first-service")
+public class FirstServiceController {
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the First Service";
+    }
+}
+```
+
+[추가 코드]
+```java
+@RestController
+@RequestMapping("/first-service")
+public class FirstServiceController {
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the First Service";
+    }
+
+    //이 부분 추가
+    @GetMapping("/message")
+    public String message(@RequestHeader("first-rquest") String header){
+        
+
+    }
+}
+
+```
+
+![img2](../../../images/posts/java/msa/chapter02/17.png)
+
+여기서 아까 만들었던 headerValue가 public String message(@RequestHeader("first-request") String header) 부분에 들어간다
+
+[참고] @Slf4j //롬복의 로그를 사용하기 위한 어노테이션
+
+메세지 로그를 남기기 위해 사용
+
+```java
+package com.example.firstservice;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+// http://localhost:8081/welcome 우리가 만든 프로젝트가 받기로 한 URI
+// 하지만 API-GATEWAY를 통해서 전달받을 때에는 http://locahost:8081/first-service/welcome 이렇게 받기 때문에 에러가 발생
+@RestController
+@RequestMapping("/first-service")
+@Slf4j //롬복의 로그를 사용하기 위한 어노테이션
+public class FirstServiceController {
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the First Service";
+    }
+
+    @GetMapping("/message")
+    public String message(@RequestHeader("first-request") String header){
+        log.info(header);
+        return "Hello World in First Service";
+    }
+}
+
+```
+
+위와 동일하게 SecondService쪽도 작업 해주기
+
+```java
+package com.example.secondservice;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/second-service")
+@Slf4j
+public class SecondServiceController {
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the Second Service";
+    }
+
+    @GetMapping("/message")
+    public String message(@RequestHeader("second-request") String header){
+        log.info(header);
+        return "Hello World in Second Service";
+    }
+
+}
+```
+
+![img2](../../../images/posts/java/msa/chapter02/18.png)
+
+이렇게 하면 정상적으로 출력 되는 것을 확인할 수 있다
+
+로그에 first-request-header도 정상적으로 출력
+
+![img2](../../../images/posts/java/msa/chapter02/19.png)
+
+그런데 위에 FilterConfig 클래스는 이런게 있다 정도만 쓰는거고 사용X => 때문에 일단 @Configuration, @Bean을 주석 처리 하자
+
+```java
+// @Configuration
+public class FilterConfig {
+    //Bean
+    public RouterLocator gatewayRoutes(RouteLocatorBuilder builder){
+
+    }
+}
+```
+
+이 상태로 실행해보면 똑같은 URI 입력해도 아무것도 안나오는것을 확인 할 수 있다
+
+[기존 코드]
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+#spring:
+#  application:
+#    name: apigateway-service
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: first-service
+#          uri: http://localhost:8081/
+#          predicates:
+#            - Path=/first-service/**
+#        - id: second-service
+#          uri: http://localhost:8082/
+#          predicates:
+#            - Path=/second-service/**
+```
+
+주석 풀고 filters 추가해주자
+
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      routes:
+        - id: first-service
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/first-service/**
+          filters:
+            - AddRequestHeader=first-request, first-request-header2
+            - AddResponseHeader=first-response, first-response-header2
+        - id: second-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
+          filters:
+            - AddRequestHeader=second-request, second-requests-header2
+            - AddResponseHeader=second-response, second-response-header2
+```
+
+이렇게 해주면 위 자바 코드와 동일하게 header에 추가되는것을 확인 할 수 있다
+
+
+![img2](../../../images/posts/java/msa/chapter02/20.png)
+
+![img2](../../../images/posts/java/msa/chapter02/21.png)
+
+![img2](../../../images/posts/java/msa/chapter02/22.png)
+
+#### 7장. Spring Cloud Gateway - Custom Filter
+
+커스텀 필터 = 자유롭게 로그남기기, 인증 처리, 키 등 처리를 할 수 있는것
+
+1. @Component
+2. Slf4j
+3. AbstractGatewayFilterFactory 상속
+4. public GatewayFilter apply(Config config) 오버라이드
+
+우리가 작성하고자 하는 내용을 apply에 작성하면 된다
+
+사용자가 로그인 했을때 토큰을 받고 그것을 계속 JSON으로 가지고 다니는 것을 JWT라고 하는데 이것을 잘 작동하고 있는지 확인하는것을 만들어보자
+
+> 기존에 사용했던 ServletRquest, ServletResponse를 스프링 5 부터는 더이상 사용하지 않고 ServerHttpRequest, response를 사용한다
+
+![img2](../../../images/posts/java/msa/chapter02/23.png)
+
+![img2](../../../images/posts/java/msa/chapter02/24.png)
+
+
+![img2](../../../images/posts/java/msa/chapter02/25.png)
+
+이제 실제 코드를 완성하러 가자
+
+apigateway에서 com.example.apigatewayservice아래에 filter 패키지를 만들고 CustomFilter 클래스를 생성
+
+```java
+package com.example.apigatewayservice.filter;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cloud.gateway.filter.GatewayFilter;
+import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
+import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.http.server.reactive.ServerHttpResponse;
+import org.springframework.stereotype.Component;
+import reactor.core.publisher.Mono;
+
+@Component
+@Slf4j
+public class CustomFilter extends AbstractGatewayFilterFactory<CustomFilter.Config> {
+
+    public CustomFilter(){
+        super(Config.class);
+    }
+
+    @Override
+    public GatewayFilter apply(Config config) {
+        return (exchange, chain) -> {
+            //import시 org.springframework.http.server.reactive.ServerHttpRequest;
+            ServerHttpRequest request = exchange.getRequest();
+            ServerHttpResponse response = exchange.getResponse();
+
+            log.info("Custom PRE Filter : request id -> {}", request.getId());
+
+            // Custom Post Filter
+            return chain.filter(exchange).then(Mono.fromRunnable(() -> {
+                log.info("Custom Post Filter : response code -> {}", response.getStatusCode());
+            }));
+        };
+
+        /*
+            그러면 gateway 필터라는 빈을 하나 등록하고 이 부분은 프리필터, 포스트필터 방식으로 나눠서 작용
+
+            람다식에 exchange, chain 객체를 받고
+
+            exchange 객체로부터 ServerHttpRequest, response 객체를 받을수 있다
+
+            포스트 필터에 반환하는곳 Mono라는 것은 웹플럭스에서 사용하는 것으로 비동기 방식으로 단일 값 전달할때 사용하는것
+         */
+    }
+
+    public static class Config{
+
+    }
+}
+```
+
+이렇게 작업 한 후 기존에 만들었던 yml 파일을 아래와 같이 수정
+
+filters 기존 코드는 주석처리 하고 새로운 커스텀 필터 추가
+
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      routes:
+        - id: first-service
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/first-service/**
+          filters:
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+            - CustomFilter
+        - id: second-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
+          filters:
+#            - AddRequestHeader=second-request, second-requests-header2
+#            - AddResponseHeader=second-response, second-response-header2
+            - CustomFilter
+```
+
+기존 FirstServiceController.java, Second쪽에도 아래에 추가 메서드 생성 필요
+
+```java
+package com.example.firstservice;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+// http://localhost:8081/welcome 우리가 만든 프로젝트가 받기로 한 URI
+// 하지만 API-GATEWAY를 통해서 전달받을 때에는 http://locahost:8081/first-service/welcome 이렇게 받기 때문에 에러가 발생
+@RestController
+@RequestMapping("/first-service")
+@Slf4j //롬복의 로그를 사용하기 위한 어노테이션
+public class FirstServiceController {
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the First Service";
+    }
+
+    @GetMapping("/message")
+    public String message(@RequestHeader("first-request") String header){
+        log.info(header);
+        return "Hello World in First Service";
+    }
+
+    //여기 추가
+    @GetMapping("/check")
+    public String check(){
+        return "Hi, there. This is a message from Second Service";
+    }
+
+}
+```
+
+second에도 동일하게 추가 필요
+
+이렇게 하고 재기동 하면 정상적으로 동작하는 것을 확인 할 수 있음
+
+![img2](../../../images/posts/java/msa/chapter02/26.png)
+
+프리 필터 : 사전에 수행
+
+포스트 필터 : 사후에 수행
+
+차후에는 필터를 이용해서 사용자 로그인 기능을 수행해보자
+
+
+<br>
+
+#### 8장. Spring Cloud Gateway - Global Filter
+
+커스텀 필터와 글로벌 필터는 비슷하지만 다르다
+
+커스텀 필터는 만든다음 필요한 부분에 yml과 같이 추가해주어야 하지만
+
+글로벌 필터는 추가하지 않아도 모두 한테 동작한다
+
+
+
+![img2](../../../images/posts/java/msa/chapter02/27.png)
+
+
+여기서 기초 상식 : @Date, @Setter, @Getter에서 String 타입이 아닌 Boolean타입인 경우 get대신에 is를 앞에 붙인다
+
+isPreLogger();
+
+isPostLogger();
+
+
+![img2](../../../images/posts/java/msa/chapter02/28.png)
+
+![img2](../../../images/posts/java/msa/chapter02/29.png)
+
+application.yml 파일에 글로벌 필터 적용시킬때 routes 위에 default-filters를 추가하고 위와 같이 해주면 된다(전체 적용)
+
+args에는 기본적으로 들어갈 매개변수들을 나타낸다
+
+-name : 이름
+
+-preLogger : true
+
+-postLogger : true
+
+설정 초기에 기본값들을 셋팅할 수 있다
+
+![img2](../../../images/posts/java/msa/chapter02/30.png)
+
+apllication.yml에 baseMessage는 Config파일에 baseMessage에 들어가게 되고 이 정보는 우리가 log를 찍을떼 나타난다
+
+apigateway filter 패키지 아래에 GlobalFilter 추가
+
+```java
+package com.example.apigatewayservice.filter;
+
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cloud.gateway.filter.GatewayFilter;
+import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
+import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.http.server.reactive.ServerHttpResponse;
+import org.springframework.stereotype.Component;
+import reactor.core.publisher.Mono;
+
+@Component
+@Slf4j
+public class GlobalFilter extends AbstractGatewayFilterFactory<GlobalFilter.Config> {
+
+    public GlobalFilter(){
+        super(Config.class);
+    }
+
+    @Override
+    public GatewayFilter apply(Config config) {
+        return (exchange, chain) -> {
+            //import시 org.springframework.http.server.reactive.ServerHttpRequest;
+            ServerHttpRequest request = exchange.getRequest();
+            ServerHttpResponse response = exchange.getResponse();
+
+            //log.info("Custom PRE Filter : request id -> {}", request.getId());
+            log.info("Custom PRE Filter : request id -> {}", config.getBaseMessage());
+
+            if(config.isPreLogger()){
+                log.info("Global Filter start : request id -> {}", request.getId());
+            }
+
+            // Custom Post Filter
+            return chain.filter(exchange).then(Mono.fromRunnable(() -> {
+                if(config.isPostLogger()){
+                    log.info("Global Post Filter : response code -> {}", response.getStatusCode());
+                }
+            }));
+        };
+
+        /*
+            그러면 gateway 필터라는 빈을 하나 등록하고 이 부분은 프리필터, 포스트필터 방식으로 나눠서 작용
+
+            람다식에 exchange, chain 객체를 받고
+
+            exchange 객체로부터 ServerHttpRequest, response 객체를 받을수 있다
+
+            포스트 필터에 반환하는곳 Mono라는 것은 웹플럭스에서 사용하는 것으로 비동기 방식으로 단일 값 전달할때 사용하는것
+         */
+    }
+
+    @Data
+    public static class Config{
+        private String baseMessage;
+        private boolean preLogger;
+        private boolean postLogger;
+    }
+}
+```
+
+이렇게 한 다음 application.yml에 가서 globalFilter 추가 작업
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      default-filters: 
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring CLoud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      routes:
+        - id: first-service
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/first-service/**
+          filters:
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+            - CustomFilter
+        - id: second-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
+          filters:
+#            - AddRequestHeader=second-request, second-requests-header2
+#            - AddResponseHeader=second-response, second-response-header2
+            - CustomFilter
+```
+
+이렇게 한다음 재기동 하면 된다
+
+
+![img2](../../../images/posts/java/msa/chapter02/31.png)
+
+정상적으로 동작하는것을 확인 할 수 있다
+
+
+
 
 
 
